# DLA_Homeworks

./: .gitignore  README.md
Homework01/: DLA-Lab1.ipynb  FasterRCNN_config.yaml  config.yaml  configResNet.yaml  pyproject.toml  utils.py
Homework01/results/: Primo_FineTuning.txt  Secondo_FineTuning.txt  Terzo_tentativo_Finetune.txt
Homework03/: Excercise1.py  Excercises_1_2.py  main.py  pyproject.toml
